[package]
name = "witter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes", "unstable"]}
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.138"
serde_json = "1.0.82"
sqlx = {version = "0.6.0", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid"] }
thiserror = "1.0.31"
tide = "0.16.0"
uuid = {version = "1.1.2", features = ["serde"]}
futures = "0.3.21"
anyhow = "1.0.58"
http-types = "2.12.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
http-service-mock = "0.5.0"